--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "eth-marketplace",
+  "name": "dtok-exchange",
   "version": "0.1.0",
-  "description": "An Ethereum Marketplace",
-  "author": "gregory@dappuniversity.com",
+  "description": "An Dtok token swapper",
+  "author": "f.rabbi07@gmail.com",
   "dependencies": {
     "babel-polyfill": "6.26.0",
     "babel-preset-env": "1.7.0",
@@ -14,16 +14,16 @@
     "chai": "4.2.0",
     "chai-as-promised": "7.1.1",
     "chai-bignumber": "3.0.0",
-    "react": "16.8.4",
+    "react": "^16.8.4",
     "react-bootstrap": "1.0.0-beta.5",
-    "react-dom": "16.8.4",
+    "react-dom": "^16.8.4",
     "react-scripts": "2.1.3",
     "truffle": "5.0.5",
-    "web3": "1.0.0-beta.55"
+    "web3": "^1.0.0-beta.55"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-scripts --openssl-legacy-provider start",
+    "build": "react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
